--- a/static/style/style.less
+++ b/static/style/style.less
@@ -1,3 +1,18 @@
-/* ===== Import des variables ===== */
-@import "../style/less/variables.less";
+/* out: ./style.css */
+
+
+// Base
+@import "base/variables.less";
+@import "base/mixins.less";
+@import "base/reset.less";
+@import "base/layout.less";
+
+// Components
+@import "../style/components/navbar.less";
+@import "../style/components/messages.less";
+@import "../style/components/footer.less";
+
+
+
+
 
